--- a/angular.json
+++ b/angular.json
@@ -117,8 +117,13 @@
               "devServerTarget": "ngrx:serve:production"
             }
           }
+        },
+        "deploy": {
+          "builder": "@angular/fire:deploy",
+          "options": {}
         }
       }
-    }},
+    }
+  },
   "defaultProject": "ngrx"
 }
